--- a/src/styles/desktop_style.css
+++ b/src/styles/desktop_style.css
@@ -61,6 +61,8 @@ button:hover {
 
 input,
 textarea {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: #212529;
   font-size: 1.1rem;
   margin: 0.5em 0.5em 0.5em 0.5em;
@@ -124,9 +126,17 @@ textarea {
 .buttonsContainer {
   align-self: center;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 100%;
   max-width: 45rem;
-  min-width: 10rem;
+  min-width: 5rem;
+  margin: 0.5em;
+}
+
+.email {
+  width: 100%;
+}
+.email input {
+  width: 30%;
 }
